name:                haskell2package
version:             1.4.0
synopsis:            Builds .rpms and .debs from Haskell projects
description:         Parses cabal files and generates a specfile or control file,
                     which is then used to build an rpm or deb respectively,
                     appropriately managing Anchor dependencies.
license:             BSD3
license-file:        LICENSE
author:              Oswyn Brent
maintainer:          Oswyn Brent <oztastic703@gmail.com>
copyright:           Anchor Engineering and Oswyn Brent 2014-2016
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.18

data-files:          templates/TEMPLATE.spec
                     templates/control

source-repository    head
   type:             git
   location:         git@github.com:oswynb/haskell2package.git

library
  exposed-modules:     Anchor.Package.Process
                       Anchor.Package.Types
                       Anchor.Package.Template
  build-depends:       base >=4.7 && < 5,
                       containers >=0.5,
                       Cabal >=1.18,
                       process >=1.2,
                       github,
                       mtl,
                       time,
                       transformers,
                       directory,
                       filepath
  hs-source-dirs:      lib
  default-language:    Haskell2010

executable haskell2rpm
  main-is:             Rpm.hs
  build-depends:       base >=4.7,
                       haskell2package

  hs-source-dirs:      src
  default-language:    Haskell2010

executable haskell2deb
  main-is:             Deb.hs
  build-depends:       base >=4.7,
                       haskell2package

  hs-source-dirs:      src
  default-language:    Haskell2010

executable haskell2packageinfo
  main-is:             Info.hs
  build-depends:       base >=4.7,
                       haskell2package

  hs-source-dirs:      src
  default-language:    Haskell2010
